# py-mono

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/pi-mono-compare/: SKILL.md
.claude/skills/pi-mono-compare/evals/: evals.json
.claude/skills/pi-mono-refer/: SKILL.md
.claude/skills/py312/: README.md  SKILL.md
.claude/skills/py312/evals/: evals.json
.claude/skills/py312/scripts/: check_py312.sh
docs/: ai-module-source-guide.md
docs/chat/: py-mono-python-replica-plan.md
docs/phases/: p1.md  p2.md
memory/: session-2026-03-17-2253.md
tests/: test_validation.py
